--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     </header>
     <div class="container">
       <div id="hour-9" class="row time-block">
-        <div class="col-md-1 hour">
+        <div id="nine" data-time = "9" class="col-md-1 hour">
           9AM
         </div>
-        <textarea class="col-md-10 description">
+        <textarea id="text-box-9am" class="col-md-10 description">
         </textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
