--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <div class="container">
       <div id="hour-9" class="row time-block">
-        <div id="nine" data-time = "9" class="col-md-1 hour">
+        <div id="nine" class="col-md-1 hour">
           9AM
         </div>
         <textarea id="text-box-9am" class="col-md-10 description">
@@ -38,10 +38,10 @@
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
       <div id="hour-9" class="row time-block">
-        <div class="col-md-1 hour">
+        <div id="ten" class="col-md-1 hour">
           10AM
         </div>
-        <textarea class="col-md-10 description">
+        <textarea id="text-box-10am"class="col-md-10 description">
         </textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
