--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
     </header>
     <div class="container">
       <div id="hour-9" class="row time-block">
-        <div id="nine" class="col-md-1 hour">
+        <div class="col-md-1 hour">
           9AM
         </div>
-        <textarea id="text-box-9am" class="col-md-10 description">
+        <textarea class="col-md-10 description">
         </textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
       <div id="hour-10" class="row time-block">
-        <div id="ten" class="col-md-1 hour">
+        <div class="col-md-1 hour">
           10AM
         </div>
-        <textarea id="text-box-10am"class="col-md-10 description">
+        <textarea class="col-md-10 description">
         </textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
@@ -61,7 +61,7 @@
         </textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
-      <div id="hour-13" class="row time-block">
+     <div id="hour-13" class="row time-block">
         <div class="col-md-1 hour">
           1PM
         </div>
@@ -78,7 +78,7 @@
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
       <div id="hour-15" class="row time-block">
-        <div class="col-md-1 hour">
+       <div class="col-md-1 hour">
           3PM
         </div>
         <textarea class="col-md-10 description">
@@ -101,8 +101,7 @@
         </textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
-      <!-- Timeblocks go here -->
-    </div>
+  
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
